--- a/opensearch/pom.xml
+++ b/opensearch/pom.xml
@@ -10,9 +10,8 @@
     <modelVersion>4.0.0</modelVersion>
     <url>https://github.com/buda-base/analysis-tibetan</url>
 
-    <artifactId>opensearch-analyzers</artifactId>
+    <artifactId>opensearch-analysis-tibetan</artifactId>
     <description>Tibetan analyzers for Opensearch</description>
-    <version>${project.parent.version}</version>
     <packaging>jar</packaging>
 
 
