--- a/opensearch/pom.xml
+++ b/opensearch/pom.xml
@@ -55,7 +55,13 @@
         <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
-           <version>2.23.1</version>
+           <version>2.21.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.21.0</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
            <groupId>org.slf4j</groupId>
